--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sprint-challenge-node-express",
   "version": "1.0.0",
   "description": "A challenge to asses Node and Express knowledge",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
